--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 
 
     <header class="en-tete">
-        <div class="particules-en-tete"></div>
-        <div class="contenu-en-tete apparition-douce">
-            <h1 class="titre-en-tete">Les Secrets Mathématiques d'un Succès Planétaire</h1>
+       
+            <h1 class="titre-en-tete">Les Secrets Mathématiques </br> d'un Succès Planétaire</h1>
             <p class="sous-titre-en-tete">
                 Une enquête data-journalistique sur l'anatomie des hits qui ont dominé Spotify en 2023
             </p>
